@@ -1,3 +1,7 @@
+2008-05-29  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* gcc.dg/nested-func-6.c: New test.
+
 2008-04-08  Richard Guenther  <rguenther@suse.de>
 
 	* gcc.c-torture/execute/20080408-1.c: New testcase.
